# Blackhole

./: .gitignore  .gitmodules  Blackhole.sh  CMakeLists.txt  GLDebugMessageCallback.cc  README.md  build.sh  main.cpp  texture.h
include/: imgui_impl_glfw.h  imgui_impl_opengl3.h  render.h  shader.h
shader/: blackhole_main.frag  bloom_brightness_pass.frag  bloom_composite.frag  bloom_downsample.frag  bloom_upsample.frag  passthrough.frag  simple.vert  tonemapping.frag
src/: GLDebugMessageCallback.h  imgui_impl_glfw.cpp  main.cpp  render.cpp  shader.cpp  texture.cpp
